--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,12 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/lucasgodeiro/testlg
 BugReports: https://github.com/lucasgodeiro/testlg/issues
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
+RoxygenNote: 6.1.1
+Imports: 
+    tibble,
+    utils,
+    dplyr
