--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,15 @@
 language: R
 sudo: false
 cache: packages
+warnings_are_errors: true
+
+os:
+  -linux
+  -osx
+
+r:
+  -3.4
+  -release
+  -devel
+
+
