--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ URL: https://github.com/lucasgodeiro/testlg
 BugReports: https://github.com/lucasgodeiro/testlg/issues
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    covr
 VignetteBuilder: knitr
 RoxygenNote: 6.1.1
 Imports: 
